# anima_lora_webui

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.ko.md  README.md  inference.py  install.ps1  plan.md  pyproject.toml  setup_and_start.bat  setup_and_start.sh  start_webui.bat  start_webui.sh  tasks.py  train.py
bench/: _anima.py
configs/: base.toml  presets.toml  sam_mask.yaml  sample_prompts.txt  web-file-groups.toml  web-ui-settings.toml  web-user-locks.toml
custom_nodes/comfyui-anima-directedit/: README.md  __init__.py  nodes.py  pyproject.toml
docs/: multi_model_support.md  separation_plan.md
gui/: __init__.py  adapter_tab.py  app.py  config_tab.py  explanations.py  gui_settings.json  i18n.py  image_tab.py  merge_tab.py  preprocess_tab.py  progress.py  system_dialog.py
networks/: CLAUDE.md  __init__.py  attention_dispatch.py  attn_fuse.py  dcw.py  lora_save.py  lora_utils.py  spd.py  spectrum.py
preprocess/: __init__.py  build_caption_index.py  cache_latents.py  cache_pe_encoder.py  cache_pooled_text.py  cache_text_embeddings.py  generate_masks.py  generate_masks_mit.py  resize_images.py
scripts/: distill_modulation.py  distill_spd.py  distill_turbo.py  edit.py  merge_to_dit.py  sync_vendor.py  train_anima_tagger.py  update.py
tests/: test_anima_tagger_dual_encoder.py  test_caption_shuffle.py  test_chimera_node_loader.py  test_config.py  test_config_normalize.py  test_dataset_group.py  test_directedit_v_injection.py  test_edit_dispatcher.py  test_fera_fecl_handler.py  test_global_router.py  test_gui_variants.py  test_lokr.py  (+25 more)
(+194 files in other folders)
